<resources>
    <string name="app_name">HWLesson4</string>
    <string name="btn_clear">C</string>
    <string name="btn_backspace">B</string>
    <string name="btn_divide">/</string>
    <string name="btn_multiply">*</string>
    <string name="btn_minus">-</string>
    <string name="btn_plus">+</string>
    <string name="btn_equal">=</string>
    <string name="btn_point">.</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
</resources>
